site_responsivo-beygros

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h4>Ao suposto melhor servidor do Brasil</h4>
             <h1>OS BEYGROS</h1>
             <p>Aqui você encontrará todo tipo de entreterimento possível! Junte-se á nós 
-            neste grupo pra lá de única.</p>
+            neste grupo pra lá de único.</p>
             <a href="#"><i class="ri-home-4-line"></i></a>
             <a href="#" class="ctaa"><i class="ri-discord-fill"></i> Entre no server</a>
         </div>
