site_responsivo_beygros_v1.0

--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
         <a href="#" class="logo">HP STYLES&copy;</a>
 
         <ul class="navlist">
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Membros</a></li>
-            <li><a href="#">Atividades</a></li>
-            <li><a href="#">Regras</a></li>
+            <li><a href="#home">Início</a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#activities">Atividades</a></li>
             <li><a href="#">Contatos</a></li>
         </ul>
 
@@ -38,13 +36,12 @@
     </header>
 
     <section class="hero">
-        <div class="hero-text">
+        <div class="hero-text" id="home">
             <h5>Bem-vindo</h5>
             <h4>Ao suposto melhor servidor do Brasil</h4>
             <h1>OS BEYGROS</h1>
             <p>Aqui você encontrará todo tipo de entreterimento possível! Junte-se á nós 
             neste grupo pra lá de único.</p>
-            <a href="#"><i class="ri-home-4-line"></i></a>
             <a href="#" class="ctaa"><i class="ri-discord-fill"></i> Entre no server</a>
         </div>
 
@@ -67,6 +64,68 @@
 
     <!--Custom js link-->
     <script src="js/script.js"></script>
-    
+
+    <section class="about">
+        <div class="about-text" id="about">
+            <br>
+                <br>
+                    <br>
+                        <h2>Sobre o server</h2>
+                    <br>
+                <br>
+            <p> <strong>Este é um servidor criado no período da pandemia <br>
+                com o simples intuito de conhecer novas pessoas <br>
+                e compartilhar dos mesmos hobby's. <br>
+                Focando principalmente em jogos e conversas totalmente paralelas.</strong>
+            </p>
+            <div class="about-img">
+                <img src="./images/cap_glass.gif" alt="cap_glass">
+            </div>
+        </div>
+    </section>
+     <br>
+        <br>
+            <br>
+                <br>
+                    <section class="activities">
+                        <div class="activities-text" id="activities">
+                           <br>
+                                <br>
+                                    <br>
+                                        <h3>Atividades</h3>
+                                            <p><strong>Servidor totalmente focado em entreterimento e
+                                                diversão, <br>variando muito entre jogos e passatempos
+                                                diários, <br>além de ter a presença
+                                                dos maiores web humoristas já vistos!</strong>
+                                            </p> 
+                                            <div class="act-img">
+                                                <img src="./images/cap_dance.gif" alt="cap_dance">   
+                                            </div>
+                                        <br>
+                                    <br>    
+                                <br>
+                        </div>
+                </section>    
 </body>
+    <br>
+        <br>
+            <br>
+                <br>
+                    <br>
+                        <footer>
+                        <section>
+                            <div class="contacts">
+                            <h4>Contatos</h4>
+                        <div class="footer-contacts">
+                            <a href="#"><i class="ri-instagram-line" style="color: white;"></i></a>
+                            <a href="#"><i class="ri-youtube-fill" style="color: white;"></i></a>
+                            <a href="https://github.com/Italofabeni?tab=overview&from=2024-03-01&to=2024-03-31" target="_blank"><i class="ri-github-fill" style="color: white;"></i></a>
+                            <p style="position: relative; right: 650px;
+                        font-size: smaller; color: rgb(10, 9, 9);">Copyright HP STYLES &copy;</p>
+                        </div>
+                            </div>
+                        </section>
+                        </footer>
+
+
 </html>
