site_responsivo_server

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#home">Início</a></li>
             <li><a href="#about">Sobre</a></li>
             <li><a href="#activities">Atividades</a></li>
-            <li><a href="#">Contatos</a></li>
+            <li><a href="#contacts">Contatos</a></li>
         </ul>
 
         <div class="bx bx-menu" id="menu-icon"></div>
@@ -116,7 +116,7 @@
                         <section>
                             <div class="contacts">
                             <h4>Contatos</h4>
-                        <div class="footer-contacts">
+                        <div class="footer-contacts" id="contacts">
                             <a href="#"><i class="ri-instagram-line" style="color: white;"></i></a>
                             <a href="#"><i class="ri-youtube-fill" style="color: white;"></i></a>
                             <a href="https://github.com/Italofabeni?tab=overview&from=2024-03-01&to=2024-03-31" target="_blank"><i class="ri-github-fill" style="color: white;"></i></a>
