site_responsivo_beygros_v1.0b

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <header>
-        <a href="#" class="logo">HP STYLES&copy;</a>
+        <a href="#home" class="logo">HP STYLES&copy;</a>
 
         <ul class="navlist">
             <li><a href="#home">Início</a></li>
@@ -42,7 +42,7 @@
             <h1>OS BEYGROS</h1>
             <p>Aqui você encontrará todo tipo de entreterimento possível! Junte-se á nós 
             neste grupo pra lá de único.</p>
-            <a href="#" class="ctaa"><i class="ri-discord-fill"></i> Entre no server</a>
+            <a href="https://discord.gg/nXqMdANC" class="ctaa" target="_blank"><i class="ri-discord-fill"></i> Entre no server</a>
         </div>
 
         <div class="hero-img">
@@ -51,12 +51,12 @@
     </section>
         <div class="icons">
             <a href="#"><i class="ri-instagram-line"></i></a>
-            <a href="#"><i class="ri-youtube-fill"></i></a>
+            <a href="https://www.youtube.com/@horadoplay4455" target="_blank"><i class="ri-youtube-fill"></i></a>
             <a href="https://github.com/Italofabeni?tab=overview&from=2024-03-01&to=2024-03-31" target="_blank"><i class="ri-github-fill"></i></a>
         </div>
 
         <div class="scroll-down">
-            <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
+            <a href="#about"><i class="ri-arrow-down-s-fill"></i></a>
         </div>
 
     <!--Scrollreveal effect-->
@@ -117,11 +117,9 @@
                             <div class="contacts">
                             <h4>Contatos</h4>
                         <div class="footer-contacts" id="contacts">
-                            <a href="#"><i class="ri-instagram-line" style="color: white;"></i></a>
-                            <a href="#"><i class="ri-youtube-fill" style="color: white;"></i></a>
-                            <a href="https://github.com/Italofabeni?tab=overview&from=2024-03-01&to=2024-03-31" target="_blank"><i class="ri-github-fill" style="color: white;"></i></a>
-                            <p style="position: relative; right: 650px;
-                        font-size: smaller; color: rgb(10, 9, 9);">Copyright HP STYLES &copy;</p>
+                            <a href="#"><i class="ri-instagram-line"></i></a>
+                            <a href="https://www.youtube.com/@horadoplay4455" target="_blank"><i class="ri-youtube-fill"></i></a>
+                            <a href="https://github.com/Italofabeni?tab=overview&from=2024-03-01&to=2024-03-31" target="_blank"><i class="ri-github-fill"></i></a>
                         </div>
                             </div>
                         </section>
