site_responsivo_beygros_v1.0b

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1>OS BEYGROS</h1>
             <p>Aqui você encontrará todo tipo de entreterimento possível! Junte-se á nós 
             neste grupo pra lá de único.</p>
-            <a href="https://discord.gg/nXqMdANC" class="ctaa" target="_blank"><i class="ri-discord-fill"></i> Entre no server</a>
+            <a href="https://discord.gg/JpGUeFZuh3" class="ctaa" target="_blank"><i class="ri-discord-fill"></i> Entre no server</a>
         </div>
 
         <div class="hero-img">
