site_responsivo_beygros_v1.0

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 </head>
 <body>
 
-    <header>
-        <a href="#home" class="logo">HP STYLES&copy;</a>
+    <header class="sticky">
+        <a href="#home" class="logo"><i class="ri-game-line" style="color: yellow;"></i> HP STYLES &copy;</a>
 
         <ul class="navlist">
-            <li><a href="#home">Início</a></li>
-            <li><a href="#about">Sobre</a></li>
-            <li><a href="#activities">Atividades</a></li>
-            <li><a href="#contacts">Contatos</a></li>
+            <li><a href="#home"><i class="ri-home-2-fill" style="font-size: medium; padding-right: 3px;"></i> Início</a></li>
+            <li><a href="#about"><i class="ri-book-open-fill" style="font-size: medium; padding-right: 3px;"></i> Sobre</a></li>
+            <li><a href="#activities"><i class="ri-team-fill"  style="font-size: medium; padding-right: 3px;"></i> Atividades</a></li>
+            <li><a href="#contacts"><i class="ri-chat-1-fill"  style="font-size: medium; padding-right: 3px;"></i> Contatos</a></li>
         </ul>
 
         <div class="bx bx-menu" id="menu-icon"></div>
