responsive_site_BYG

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
 
-    <section class="hero">
-        <div class="hero-text" id="home">
+    <section class="hero" id="home">
+        <div class="hero-text">
             <h5>Bem-vindo</h5>
             <h4>Ao suposto melhor servidor do Brasil</h4>
             <h1>OS BEYGROS</h1>
@@ -65,8 +65,8 @@
     <!--Custom js link-->
     <script src="js/script.js"></script>
 
-    <section class="about">
-        <div class="about-text" id="about">
+    <section class="about"  id="about">
+        <div class="about-text">
             <br>
                 <br>
                     <br>
@@ -87,8 +87,8 @@
         <br>
             <br>
                 <br>
-                    <section class="activities">
-                        <div class="activities-text" id="activities">
+                    <section class="activities" id="activities">
+                        <div class="activities-text" >
                            <br>
                                 <br>
                                     <br>
