--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </div>
     </section>
         <div class="icons">
-            <a href="#"><i class="ri-instagram-line"></i></a>
-            <a href="https://www.youtube.com/@horadoplay4455" target="_blank"><i class="ri-youtube-fill"></i></a>
-            <a href="https://github.com/Italofabeni?tab=overview&from=2024-03-01&to=2024-03-31" target="_blank"><i class="ri-github-fill"></i></a>
+            <a href="#"><i class="ri-instagram-line" id="insta"></i></a>
+            <a href="https://www.youtube.com/@horadoplay4455" target="_blank"><i class="ri-youtube-fill" id="youtube"></i></a>
+            <a href="https://github.com/Italofabeni?tab=overview&from=2024-03-01&to=2024-03-31" target="_blank"><i class="ri-github-fill" id="git"></i></a>
         </div>
 
         <div class="scroll-down">
