website_beygros_beta

--- a/index.html
+++ b/index.html
@@ -65,65 +65,47 @@
     <!--Custom js link-->
     <script src="js/script.js"></script>
 
-    <section class="about"  id="about">
-        <div class="about-text">
-            <br>
-                <br>
-                    <br>
-                        <h2>Sobre o server</h2>
-                    <br>
-                <br>
-            <p> <strong>Este é um servidor criado no período da pandemia <br>
-                com o simples intuito de conhecer novas pessoas <br>
-                e compartilhar dos mesmos hobby's. <br>
-                Focando principalmente em jogos e conversas totalmente paralelas.</strong>
-            </p>
+    <section class="sobre"id="about">
+        <div class="row">
+            <div class="about-col-content">
+                <h1>Sobre o server</h1>
+                <p><strong>Este é um servidor criado no período da pandemia
+                    com o simples intuito de conhecer novas pessoas
+                    e compartilhar dos mesmos hobby's.
+                    Focando principalmente em jogos e conversas totalmente paralelas.</strong></p>
+            </div>
             <div class="about-img">
                 <img src="./images/cap_glass.gif" alt="cap_glass">
             </div>
+        </section>
+
+        <section class="atividades"id="activities">
+            <div class="row">
+                <div class="actvit-col-content">
+                    <h1>Atividades</h1>
+                    <p><strong>Servidor totalmente focado em entreterimento e
+                        diversão,variando muito entre jogos e passatempos
+                        diários,além de ter a presença
+                        dos maiores web humoristas já vistos!</strong></p>
+                </div>
+                <div class="act-img">
+                    <img src="./images/cap_dance.gif" alt="cap_glass">
+                </div>
+            </section>
+ 
+</body>
+    <footer>
+    <section>
+        <div class="contacts">
+        <h4>Contatos</h4>
+            <div class="footer-contacts" id="contacts">
+            <a href="#"><i class="ri-instagram-line"></i></a>
+            <a href="https://www.youtube.com/@horadoplay4455" target="_blank"><i class="ri-youtube-fill"></i></a>
+            <a href="https://github.com/Italofabeni?tab=overview&from=2024-03-01&to=2024-03-31" target="_blank"><i class="ri-github-fill"></i></a>
+        </div>
         </div>
     </section>
-     <br>
-        <br>
-            <br>
-                <br>
-                    <section class="activities" id="activities">
-                        <div class="activities-text" >
-                           <br>
-                                <br>
-                                    <br>
-                                        <h3>Atividades</h3>
-                                            <p><strong>Servidor totalmente focado em entreterimento e
-                                                diversão, <br>variando muito entre jogos e passatempos
-                                                diários, <br>além de ter a presença
-                                                dos maiores web humoristas já vistos!</strong>
-                                            </p> 
-                                            <div class="act-img">
-                                                <img src="./images/cap_dance.gif" alt="cap_dance">   
-                                            </div>
-                                        <br>
-                                    <br>    
-                                <br>
-                        </div>
-                </section>    
-</body>
-    <br>
-        <br>
-            <br>
-                <br>
-                    <br>
-                        <footer>
-                        <section>
-                            <div class="contacts">
-                            <h4>Contatos</h4>
-                        <div class="footer-contacts" id="contacts">
-                            <a href="#"><i class="ri-instagram-line"></i></a>
-                            <a href="https://www.youtube.com/@horadoplay4455" target="_blank"><i class="ri-youtube-fill"></i></a>
-                            <a href="https://github.com/Italofabeni?tab=overview&from=2024-03-01&to=2024-03-31" target="_blank"><i class="ri-github-fill"></i></a>
-                        </div>
-                            </div>
-                        </section>
-                        </footer>
+    </footer>
 
 
 </html>
