--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!--Custom css link -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/mediaqueries.css">
     <!--Boxicons link-->
     <link rel="stylesheet"
     href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
